ifixed issues with obliviot nav and various logo image sizes

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationNavComponent.html
@@ -25,7 +25,9 @@
         <div data-component-name="dark_OrganizationNavComponent">
             <div class="ui stackable two column grid">
                 <div class="six wide column">
-                    <img class="classes.obliviot_darkLogo" data-component-props="src={this.props.image_src}" src="../images/disrupt_logo.jpg" />
+                    <div style="height:80px;line-height:80px;max-width:55%;float:left">
+                        <img class="classes.obliviot_darkLogo" data-component-props="src={this.props.image_src}" src="../images/disrupt_logo.jpg" />
+                    </div>
                     <div class="classes.obliviot_dark_social_menu_container">
                         <div class="classes.obliviot_dark_social_menu_item" data-component-value="{this.props.social_link1}">
                             <i class="fa fa-instagram"></i>
