--- a/content_builder/src/html/themes/obliviot/dark/OrganizationTwitchComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationTwitchComponent.html
@@ -22,7 +22,7 @@
       </script>  
    </head>
    <body>
-      <div data-component-name="dark_OrganizationTwitchComponent">
+      <div data-component-name="dark_OrganizationTwitchComponent" style="display:inline-block;">
             <div class="classes.obliviot_light_twitch_feed_container">
                 <iframe data-component-props="src={this.props.twitch_url}" frameborder="0" allowfullscreen="true" scrolling="no" height="150" width="300"></iframe>
             </div>
