got rid of horrible notification button from twitch frames

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationTwitchComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationTwitchComponent.html
@@ -24,7 +24,7 @@
    <body>
       <div data-component-name="dark_OrganizationTwitchComponent" style="display:inline-block;">
             <div class="classes.obliviot_light_twitch_feed_container">
-                <iframe data-component-props="src={this.props.twitch_url}" frameborder="0" allowfullscreen="true" scrolling="no" height="150" width="300"></iframe>
+                <iframe class="embed-responsive-item" data-component-props="src={this.props.twitch_url}" frameborder="0" allowfullscreen="true" scrolling="no" height="150" width="300" controls="false"></iframe>
             </div>
         </div>
    </body>
