made matches horizontal scroll

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponent.html
@@ -22,9 +22,9 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="dark_OrganizationMatchesComponent" class="classes.darkNavBG">
+        <div data-component-name="dark_OrganizationMatchesComponent">
             <div>
-                <div class="ui stackable three column grid" data-component-value="{this.props.recent_matches}">Matches</div>
+                <div class="classes.obliviot_dark_matches_holder" data-component-value="{this.props.recent_matches}">Matches</div>
             </div>
         </div>
    </body>
