--- a/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponentElement.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationMatchesComponentElement.html
@@ -22,8 +22,7 @@
       </script>  
    </head>
    <body>
-        <div data-component-name="dark_OrganizationMatchesComponentElement">
-            <div class="column">
+        <div data-component-name="dark_OrganizationMatchesComponentElement" style="display:inline-block;">
                 <div class="classes.obliviot_dark_match_container">
                     <div class="classes.obliviot_dark_match_vs_container">
                         <img class="classes.obliviot_dark_match_vs_image" data-component-props="src={this.props.matches_image_1}" />
@@ -33,7 +32,6 @@
                     <div class="classes.obliviot_dark_match_vs_date" data-component-value="{this.props.matches_date}">22 AUG 2018</div>
                     <div data-component-props="style={this.props.win_style}" class="classes.obliviot_dark_corner_win" ></div>
                 </div>
-            </div>
         </div>
    </body>
    <script>
