--- a/html/landing/index.html
+++ b/html/landing/index.html
@@ -180,7 +180,8 @@
                     <div id="menu_why" class="classes.menu_modal_item_container">Why Origin?</div>
                     <div id="menu_upcoming" class="classes.menu_modal_item_container">Upcoming Features</div>
                 </div>
-                <div class="ui stackable two column grid">
+                <div class="classes.landing_page_button_container">
+                    <div class="ui stackable two column grid">
                         <div class="column">
                             <a href="/signup_org">
                                 <div class="classes.landing_page_join_button">Organization</div>
@@ -191,6 +192,7 @@
                                 <div class="classes.landing_page_join_button">Individual</div>
                             </a>
                         </div>
+                    </div>
                 </div>
                 <div class="classes.landing_footer">
                     <p class="classes.landing_footer_text">© Origin. All rights reserved.</p>
