--- a/content_builder/src/html/themes/obliviot/dark/OrganizationTwitchHolderComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationTwitchHolderComponent.html
@@ -22,10 +22,12 @@
       </script>  
    </head>
    <body>
-      <div data-component-name="dark_OrganizationTwitchHolderComponent">
-            <div class="classes.obliviot_dark_twitch_container" data-component-value={this.props.twitch_items}>
+      <div data-component-name="dark_OrganizationTwitchHolderComponent" style="position:relative;">
+            <div class="classes.obliviot_dark_twitch_container"  data-component-props="ref={c => {this.scrollRef = c;}}" data-component-value={this.props.twitch_items}>
                 twitch elements go here
             </div>
+            <div class="classes.obliviot_dark_twitch_left_arrow" data-component-props="onClick={this.props.handleLeftScroll}"><i class="fa fa-arrow-left"></i></div>
+            <div class="classes.obliviot_dark_twitch_right_arrow" data-component-props="onClick={this.props.handleRightScroll}"><i class="fa fa-arrow-right"></i></div>
         </div>
    </body>
    <script>
