added discord icon to social nav

--- a/content_builder/src/html/themes/obliviot/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationNavComponent.html
@@ -44,6 +44,9 @@
                         <div class="classes.obliviot_light_social_menu_item" data-component-value="{this.props.social_link5}">
                             <i class="fa fa-instagram"></i>
                         </div>
+                        <div class="classes.obliviot_light_social_menu_item" data-component-value="{this.props.social_link6}">
+                            <i class="fa fa-discord"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="ten wide column">
