--- a/content_builder/src/html/themes/enigma/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationNavComponent.html
@@ -42,6 +42,9 @@
                             <div class="classes.obliviot_social_menu_item" data-component-value="{this.props.social_link5}">
                                 <i class="fa fa-instagram"></i>
                             </div>
+                            <div class="classes.obliviot_social_menu_item" data-component-value="{this.props.social_link6}">
+                                <i class="fa fa-discord"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
