added discord icon to social nav

--- a/content_builder/src/html/themes/enigma/light/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationNavComponent.html
@@ -43,7 +43,7 @@
                                 <i class="fa fa-instagram"></i>
                             </div>
                             <div class="classes.obliviot_social_menu_item" data-component-value="{this.props.social_link6}">
-                                <i class="fa fa-discord"></i>
+                                <i class="fab fa-discord"></i>
                             </div>
                         </div>
                     </div>
