--- a/content_builder/src/html/themes/obliviot/dark/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationNavComponent.html
@@ -45,7 +45,7 @@
                             <i class="fa fa-instagram"></i>
                         </div>
                         <div class="classes.obliviot_dark_social_menu_item" data-component-value="{this.props.social_link6}">
-                            <i class="fa fa-discord"></i>
+                            <i class="fab fa-discord"></i>
                         </div>
                     </div>
                 </div>
