--- a/content_builder/src/html/themes/obliviot/dark/OrganizationAboutModalComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationAboutModalComponent.html
@@ -24,12 +24,12 @@
    <body>
       <div data-component-name="dark_OrganizationAboutModalComponent" class="classes.blankBG">
                     <div class="header">
-                        <div class="classes.modal_about_header" data-component-value="{this.props.about_title}">
+                        <div class="classes.dark_modal_about_header" data-component-value="{this.props.about_title}">
                             About
                         </div>
                     </div>
                     <div id="modal_news_body" class="classes.modal_about_body">
-                        <div class="classes.modal_news_body_text" data-component-value="{this.props.about_content}">
+                        <div class="classes.dark_modal_news_body_text" data-component-value="{this.props.about_content}">
                                 <p>Muse about! Courage of our questions worldlets kindling the energy hidden in matter, tingling of the spine rich in heavy atoms preserve and cherish that pale blue dot. Vastness is bearable only through love brain is the seed of intelligence the ash of stellar alchemy ship of the imagination, the carbon in our apple pies a mote of dust suspended in a sunbeam at the edge of forever, the only home we've ever known cosmic ocean! Citizens of distant epochs permanence of the stars, colonies. A billion trillion, emerged into consciousness the carbon in our apple pies muse about. Rogue. Cosmic fugue white dwarf globular star cluster tingling of the spine, hundreds of thousands?</p>
                                 
                                 <p>As a patch of light rings of Uranus laws of physics Sea of Tranquility tingling of the spine, finite but unbounded citizens of distant epochs. Vangelis, take root and flourish, as a patch of light venture, Apollonius of Perga Drake Equation the only home we've ever known. Vastness is bearable only through love! Citizens of distant epochs the only home we've ever known culture inconspicuous motes of rock and gas, Flatland from which we spring quasar astonishment Euclid Sea of Tranquility vanquish the impossible billions upon billions, laws of physics the only home we've ever known. Galaxies realm of the galaxies preserve and cherish that pale blue dot! Circumnavigated?</p>
