--- a/content_builder/src/html/themes/obliviot/dark/OrganizationRosterItemComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationRosterItemComponent.html
@@ -33,18 +33,18 @@
                     <div class="thirteen wide column">
                         <div style="display: table; padding-top: 10px; padding-bottom: 10px">
                             <div class="classes.roster_item_name_container">
-                                <span data-component-value="{this.props.roster_name}" class="classes.roster_name">Bobby Jones</span>
-                                <span class="classes.roster_divider">|</span>
-                                <span data-component-value="{this.props.roster_nickname}" class="classes.roster_name">ThunderDude</span>
+                                <span data-component-value="{this.props.roster_name}" class="classes.dark_roster_name">Bobby Jones</span>
+                                <span class="classes.dark_roster_divider">|</span>
+                                <span data-component-value="{this.props.roster_nickname}" class="classes.dark_roster_name">ThunderDude</span>
                             </div>
                             <div class="classes.roster_item_about_container">
-                                <span data-component-value="{this.props.roster_about}" class="classes.roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
+                                <span data-component-value="{this.props.roster_about}" class="classes.dark_roster_about_text">Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years. Bobby Jones is is a player for Ascendant Gaming. He is most known for playing for Team Kaliber for over 2.5 years.</span>
                             </div>
                             <div class="classes.roster_item_social_container">
-                                <div data-component-props="onClick={()=>{this.props.handle_social('twitter', this.props.ind_user)}} style={this.props.twitter_style}" class="classes.roster_item_social_icon"><i class="fa fa-twitter"></i></div>
-                                <div data-component-props="onClick={()=>{this.props.handle_social('facebook', this.props.ind_user)}} style={this.props.facebook_style}" class="classes.roster_item_social_icon"><i class="fa fa-facebook"></i></div>
-                                <div data-component-props="onClick={()=>{this.props.handle_social('instagram', this.props.ind_user)}} style={this.props.instagram_style}" class="classes.roster_item_social_icon"><i class="fa fa-instagram"></i></div>
-                                <div data-component-props="onClick={()=>{this.props.handle_social('youtube', this.props.ind_user)}} style={this.props.youtube_style}" class="classes.roster_item_social_icon"><i class="fa fa-youtube"></i></div>
+                                <div data-component-props="onClick={()=>{this.props.handle_social('twitter', this.props.ind_user)}} style={this.props.twitter_style}" class="classes.dark_roster_item_social_icon"><i class="fa fa-twitter"></i></div>
+                                <div data-component-props="onClick={()=>{this.props.handle_social('facebook', this.props.ind_user)}} style={this.props.facebook_style}" class="classes.dark_roster_item_social_icon"><i class="fa fa-facebook"></i></div>
+                                <div data-component-props="onClick={()=>{this.props.handle_social('instagram', this.props.ind_user)}} style={this.props.instagram_style}" class="classes.dark_roster_item_social_icon"><i class="fa fa-instagram"></i></div>
+                                <div data-component-props="onClick={()=>{this.props.handle_social('youtube', this.props.ind_user)}} style={this.props.youtube_style}" class="classes.dark_roster_item_social_icon"><i class="fa fa-youtube"></i></div>
                             </div>
                         </div>
                     </div>
