fixed issues with modals

--- a/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
@@ -31,7 +31,7 @@
                         <div data-component-value="{this.props.navContent}">Nav</div>
                     </header>
                     <div  id="sponsors" data-component-value="{this.props.topSponsorContent}">Nav</div>
-                    <div data-component-value="{this.props.rosterContent}" id="roster_component">
+                    <div data-component-value="{this.props.rosterContent}" id="roster_component" style="padding-top:30px;">
                         
                     </div>
                     <div class="classes.obliviot_lightBlogContainer">
