--- a/content_builder/src/html/themes/obliviot/light/OrganizationRosterItemComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationRosterItemComponent.html
@@ -23,7 +23,7 @@
    </head>
    <body id="gradient">
         <div data-component-name="light_OrganizationRosterItemComponent">
-            <div class="classes.roster_item_container">
+            <div class="classes.light_roster_item_container">
                 <div class="ui stackable two column grid">
                     <div class="three wide column">
                         <div class="classes.roster_item_img_container">
