--- a/content_builder/src/html/themes/old_light/light_OrganizationNewsModalComponent.html
+++ b/content_builder/src/html/themes/old_light/light_OrganizationNewsModalComponent.html
@@ -22,7 +22,7 @@
       </script>  
    </head>
    <body>
-      <div data-component-name="light_OrganizationNewsModalComponent" class="classes.darkBG">
+      <div data-component-name="light_OrganizationNewsModalComponent" class="classes.lightBG">
             <div id="about_modal" class="ui modal" data-component-props="style={this.props.extra_style}">
                 <i data-component-props="onClick={this.props.closeModal}" class="close icon"></i>
                 <div class="classes.modal_inner">
