temp replaced bottom nav with header menu

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -78,37 +78,9 @@
                     </div>
                     <div id="matches_container" data-component-value="{this.props.matchesContent}">
                     </div>
-                    <div id="bottom_nav" class="classes.obliviot_dark_bottom_nav" data-component-props="style={this.props.obliviot_hidden_style}">
-                        <div class="ui stackable five column grid">
-                            <div class="column">
-                                <img data-component-props="src={this.props.image_src}" class="classes.obliviot_dark_bottom_nav_logo" src="../images/disrupt_logo.jpg" />
-                            </div>
-                            <div class="column">
-                                <div class="classes.obliviot_dark_bottom_nav_title">NAVIGATION</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">Teams</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">News</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">Partners</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">Streams</div>
-                            </div>
-                            <div class="column">
-                                <div class="classes.obliviot_dark_bottom_nav_title">ABOUT</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">About</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">Media Resources</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">Careers</div>
-                            </div>
-                            <div class="column">
-                                <div class="classes.obliviot_dark_bottom_nav_title">CONTENT</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">About</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">Comtact</div>
-                            </div>
-                            <div class="column">
-                                <div class="classes.obliviot_dark_bottom_nav_title">TEAMS</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">About</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">Media Resources</div>
-                                <div class="classes.obliviot_dark_bottom_nav_sub">Careers</div>
-                            </div>
-                        </div>
-                    </div>
+                    <footer class="classes.obliviot_darkHeader">
+                        <div data-component-value="{this.props.navContent}">Nav</div>
+                    </footer>
                 </div>
                 <div class="classes.obliviot_orgFooter">
                     <p class="classes.obliviot_orgFooterText">© Origin. All rights reserved.</p>
