fixes for obliviot mobile WIP

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -23,7 +23,7 @@
    </head>
    <body>
       <div data-component-name="dark_OrganizationPageComponent"  class="classes.darkObliotBG">
-            <div class="classes.dark_pageTestContraint">
+            <div>
                 <img id="bg_img" class="classes.obliviot_dark_bg_img" src="../images/dark_main.jpeg" alt=""/>
                 <div class="classes.obliviot_dark_bg_filter"></div>
                 <div class="classes.obliviot_darkContraint">
