--- a/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
@@ -23,7 +23,7 @@
    </head>
    <body>
       <div data-component-name="light_OrganizationPageComponent"  class="classes.lightObliotBG">
-            <div class="classes.light_pageTestContraint">
+            <div>
                 <img id="bg_img" class="classes.obliviot_light_bg_img" src="../images/light_main.jpeg" alt=""/>
                 <div class="classes.obliviot_light_bg_filter" data-component-props="style={this.props.obliviot_page_style}"></div>
                 <div class="classes.obliviot_lightContraint">
