--- a/content_builder/src/html/themes/admin/OrganizationAdminSponserComponentElement.html
+++ b/content_builder/src/html/themes/admin/OrganizationAdminSponserComponentElement.html
@@ -27,7 +27,7 @@
                         <div data-component-props="style={this.props.element_style_disable} onClick={this.props.subscriptionClick}">
                             <img data-component-props="style={this.props.element_style_disable_image} src={this.props.element_disable_image_src}" src="xx" />
                         </div>
-                        <div data-component-props="style={this.props.element_style_disable_under}">
+                        <div>
                             <div data-component-props="onClick={this.props.handleFileClick}" class="classes.admin_sponser_button">
                                     <i class="cloud icon"></i>
                                     Upload Sponsor
@@ -48,7 +48,7 @@
                             <div class="classes.admin_submit_box">
                                 <div data-component-props="onClick={this.props.handleSubmit}" class="classes.admin_submit_button">Submit</div>
                             </div>
-                        </div>
+                            </div>
         </div>
    </body>
    <script>
