added new blog list component WIP

--- a/content_builder/src/html/themes/enigma/dark/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/enigma/dark/OrganizationNavComponent.html
@@ -60,6 +60,7 @@
                         <div class="classes.dark_org_menu_container">
                             <a><div id="menu_login" data-component-props="onClick={this.props.handleLoginClick}" class="classes.org_menu_dark_item">Login</div></a>
                             <a><div id="menu_store" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_dark_item">Store</div></a>
+                            <a><div id="menu_blog" data-component-props="style={this.props.blog_style} onClick={this.props.handleBlogClick}" class="classes.org_menu_dark_item">Blog</div></a>
                             <a><div id="menu_about" data-component-props="style={this.props.sponsers_style} onClick={this.props.handleSponsersClick}" class="classes.org_menu_dark_item">Sponsors</div></a>
                             <a><div id="menu_about" data-component-props="style={this.props.about_style} onClick={this.props.handleAboutClick}" class="classes.org_menu_dark_item">About</div></a>
                             <a href="#home_cont"><div id="menu_home" data-component-props="style={this.props.home_style}" class="classes.org_menu_dark_item">Home</div></a>
