--- a/content_builder/src/html/themes/enigma/light/OrganizationMobileMenuComponent.html
+++ b/content_builder/src/html/themes/enigma/light/OrganizationMobileMenuComponent.html
@@ -39,6 +39,11 @@
                             </a>
                 </div>
                 <div class="classes.obliviot_mobile_menu_item">
+                        <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={this.props.handleBlogClick}">
+                                Blog
+                            </a>
+                </div>
+                <div class="classes.obliviot_mobile_menu_item">
                         <a class="classes.obliviot_mobile_menu_item_box" data-component-props="onClick={this.props.handleLoginClick}">
                                 Login
                             </a>
