--- a/content_builder/src/html/themes/obliviot/dark/OrganizationNavComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationNavComponent.html
@@ -54,6 +54,7 @@
                         <div class="classes.obliviot_org_menu_dark_container">
                             <a href="#"><div id="menu_login" class="classes.org_menu_obliviot_dark_item" data-component-props="onClick={this.props.handleLoginClick}">Login</div></a>
                             <a href="#"><div id="menu_news" data-component-props="style={this.props.store_style} onClick={this.props.handleStoreClick}" class="classes.org_menu_obliviot_dark_item">Store</div></a>
+                            <a href="#"><div id="menu_blog" data-component-props="style={this.props.blog_style} onClick={this.props.handleBlogClick}" class="classes.org_menu_obliviot_dark_item">Blog</div></a>
                             <a href="#"><div id="roster_button" data-component-props="style={this.props.roster_menu_style} onClick={this.props.handleRosterButtonClick}" class="classes.org_menu_obliviot_dark_item">Rosters</div>
                                 <div class="classes.obliviot_dropdown_container" data-component-props="style={this.props.roster_dropdown_style}">
                                     <div class="classes.obliviot_dropdown_container_close" data-component-props="onClick={this.props.handleCloseClick}">X</div>
