made obliviot theme view more on news section clickable to load blog list view

--- a/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/dark/OrganizationPageComponent.html
@@ -51,7 +51,7 @@
                                 <div class="classes.obliviot_dark_section_control_container">
                                     <div class="classes.obliviot_dark_section_divider"></div>
                                     <div class="classes.obliviot_dark_section_title">NEWS</div>
-                                    <div class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
+                                    <div data-component-props="onClick={this.props.handleViewBlogClick}" class="classes.obliviot_dark_section_view_more">VIEW MORE</div>
                                 </div>
                                 <div id="news_div" class="classes.obliviot_dark_news_outer_constraint">
                                     <div>
