--- a/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
+++ b/content_builder/src/html/themes/obliviot/light/OrganizationPageComponent.html
@@ -51,7 +51,7 @@
                                 <div class="classes.obliviot_light_section_control_container">
                                     <div class="classes.obliviot_light_section_divider"></div>
                                     <div class="classes.obliviot_light_section_title">NEWS</div>
-                                    <div class="classes.obliviot_light_section_view_more">VIEW MORE</div>
+                                    <div data-component-props="onClick={this.props.handleViewBlogClick}" class="classes.obliviot_light_section_view_more">VIEW MORE</div>
                                 </div>
                                 <div id="news_div" class="classes.obliviot_light_news_outer_constraint">
                                     <div>
