fullstory tracking only in production script plus individual page

--- a/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
+++ b/content_builder/src/html/themes/individual/IndividualEditModalComponent.html
@@ -66,6 +66,7 @@
                         <input data-component-props="value={this.props.twitchUrl} onChange={(e)=>{this.props.handleChange('twitchUrl', e);}}" class="classes.modal_individual_edit_input" placeholder="Twitch Handle not full URL" />
                         <div class="classes.individual_label">YouTube Channel ID</div>
                         <input data-component-props="value={this.props.youtubeChannel} onChange={(e)=>{this.props.handleChange('youtubeChannel', e);}}" class="classes.modal_individual_edit_input" placeholder="Youtube Channel ID not full URL" />
+                        <button class='ui instagram button' role='button' data-component-props="style={{ marigin-bottom:2em;}}"><i aria-hidden='true' class='instagram icon'></i>Connect with Instagram</button>
                         <button class='ui instagram button' role='button'><i aria-hidden='true' class='instagram icon'></i>Connect with Instagram</button>
                         <div data-component-props="onClick={this.props.closeModal}" class="classes.modal_individual_submit_button_container">
                             <div class="classes.modal_individual_submit_button">Cancel</div>
